manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "ramazurekube-ca7e"
    labels:
        app: "ramazurekube-ca7e"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: ramazurekubea804-ramazurekube-ca7e.423687d7af774be8a70f.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                service:
                    name: "ramazurekube-ca7e"
                    port:
                        number: 8080
